--- a/style.css
+++ b/style.css
@@ -60,38 +60,58 @@
 
 /* <-- Game Page Styles --> */
 
+#gameBody{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 2vmin;
+  border: 2px solid black;
+}
 .gameBoard {
   display: grid;
-  grid-template-columns: 1fr 16fr 1fr;
+  grid-template-columns: 1fr 5fr 1fr;
   border: 2px solid blue;
   align-items: center;
+  height: 70vh;
+  width: 95vw;
 }
 .boardBlocks {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 20vh;
-  width: 20vh;
+  height: 40%;
+  width: 40%;
   border: 2px solid red;
 }
 .playArea {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
-
-}
-.redSide, .blueSide {
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height:50vh;
-  width:50vh;
+  width: 100%;
+  height: 50%;
+}
+.redSide {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 50%;
+  width: 100%;
   border: 2px solid green;
+  
+}
+.blueSide {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 50%;
+  width: 100%;
+  border: 2px solid green;
+  
 }
 .start, .safe {
-  
-  height: 50vh;
-  width: 50vh;
+  height: 50%;
+  width: 95%;
   border: 2px solid yellow;
 }
