--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   flex-wrap: nowrap;
   padding: 4vh;
   margin: 4vh;
-  background-image: url('./images/pexels-anni-roenkae-2832382.jpg') ;
+  background-image: url('./images/pexels-anni-roenkae-2832382.jpg');
 }
 .landingHead {
   text-align: center;
@@ -31,7 +31,12 @@
   background-image: radial-gradient(rgba(255, 0, 0, 0.843),rgb(0, 0, 255));
   color:azure;
   border-radius: 3vmin;
-  border: 1vh solid rgba(255, 0, 0, 0.6);
+  border: 1vh solid rgba(255, 0, 0, 0.8);
+}
+#playBtn:hover {
+  background-image: radial-gradient(rgb(0, 0, 255),rgba(255, 0, 0, 0.843));
+  border: 1vh solid rgba(0,0,255, 0.8);
+
 }
 .landingTitle {
   font-family: 'Acme', sans-serif;
@@ -73,12 +78,14 @@
   text-align: center;
   font-family:'Acme',sans-serif;
   color:azure;
+  background-color: rgba(30, 16, 125, 0.67);
   font-size: 10vh;
 }
 .gameBoard {
   display: grid;
   grid-template-columns: 1fr 5fr 1fr;
-  border: 2px solid blue;
+  border: 2px solid rgb(255, 255, 255);
+  background-color: rgb(52, 47, 85);
   align-items: center;
   height: 50vh;
   width: 95vw;
@@ -89,7 +96,7 @@
   align-items: center;
   height: 40%;
   width: 40%;
-  border: 2px solid red;
+  border: 2px solid rgb(182, 182, 182);
 }
 .playArea {
   display: flex;
@@ -105,7 +112,6 @@
   align-items: center;
   height: 50%;
   width: 100%;
-  border: 2px solid green;
   
 }
 .blueSide {
@@ -114,7 +120,6 @@
   align-items: center;
   height: 50%;
   width: 100%;
-  border: 2px solid green;
 }
 .start, .safe {
   display:flex;
@@ -122,7 +127,7 @@
   justify-content: space-evenly;
   height: 50%;
   width: 95%;
-  border: 2px solid yellow;
+  border: 2px solid blue;
 }
 .start {
   background-color: black;
@@ -130,17 +135,15 @@
 .safe {
   background-color: green;
 }
-.redPegs {
+.redPegs, .bluePegs{
   background-color: red;
   height: 25%;
   width: 25%;
+  border: 2px solid rgb(138, 138, 138);
   border-radius: 50%;
 }
 .bluePegs {
   background-color: blue;
-  height: 25%;
-  width: 25%;
-  border-radius: 50%;
 }
 .bottomPanel {
   height: 20vh;
@@ -169,4 +172,12 @@
   background-image: radial-gradient(rgba(255, 0, 0, 0.843),rgb(0, 0, 255));
   border: 1vh solid rgba(255, 0, 0, 0.6);
   font-size: 5vmin;
+}
+nav {
+  display: flex;
+  justify-content: right;
+}
+.homeBtn {
+  color: white;
+  background-color: rgb(166, 166, 166);
 }
