--- a/style.css
+++ b/style.css
@@ -71,24 +71,31 @@
   align-items: center;
   justify-content: center;
   margin: 2vmin;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   background-color: rgb(36, 30, 73);
 }
 .gameHead {
   text-align: center;
+  text-shadow: 3px 3px red;
   font-family:'Acme',sans-serif;
   color:azure;
+  height: 100%;
+  width: 30%;
+  margin: 0 auto;
   background-color: rgba(30, 16, 125, 0.67);
+  border: 1px solid white;
+  border-bottom: none;
   font-size: 10vh;
 }
 .gameBoard {
   display: grid;
   grid-template-columns: 1fr 5fr 1fr;
   border: 2px solid rgb(255, 255, 255);
-  background-color: rgb(52, 47, 85);
+  background-color: rgb(87, 83, 116);
   align-items: center;
   height: 50vh;
   width: 95vw;
+  padding: 5px;
 }
 .boardBlocks {
   display: flex;
@@ -96,7 +103,8 @@
   align-items: center;
   height: 40%;
   width: 40%;
-  border: 2px solid rgb(182, 182, 182);
+  background-color: bisque;
+  border: 2px solid rgb(32, 32, 32);
 }
 .playArea {
   display: flex;
@@ -129,6 +137,9 @@
   width: 95%;
   border: 2px solid blue;
 }
+#redStart, #blueSafe {
+  border: 2px solid red;
+} 
 .start {
   background-color: black;
 }
@@ -157,6 +168,11 @@
   width: 30vw;
   height: 10vh;
   border: 2px solid white;
+  font-family: 'Acme',sans-serif;
+  color:azure;
+  font-size: 9vmin;
+  text-align: center;
+  text-shadow: 3px 3px red;
 }
 .gameBtns {
   font-family: 'Acme', sans-serif;
@@ -180,4 +196,9 @@ nav {
 .homeBtn {
   color: white;
   background-color: rgb(166, 166, 166);
+}
+.dice {
+  height:15vh;
+  width: 15vh;
+  border: 2px solid red;
 }
