--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 .button {
   text-align: center;
 }
-#playBtn {
+#startBtn {
   font-family: 'Acme', sans-serif;
   width: 15vw;
   height: 15vh;
@@ -33,15 +33,14 @@
   border-radius: 3vmin;
   border: 1vh solid rgba(255, 0, 0, 0.8);
 }
-#playBtn:hover {
+#startBtn:hover {
   background-image: radial-gradient(rgb(0, 0, 255),rgba(255, 0, 0, 0.843));
   border: 1vh solid rgba(0,0,255, 0.8);
-
 }
 .landingTitle {
   font-family: 'Acme', sans-serif;
   font-size: 15vh;
-  color: azure
+  color: azure;
 }
 .gameRules {
   margin: 5vmin;
@@ -71,7 +70,6 @@
   align-items: center;
   justify-content: center;
   margin: 2vmin;
-  /* border: 2px solid black; */
   background-color: rgb(36, 30, 73);
 }
 .gameHead {
