--- a/style.css
+++ b/style.css
@@ -108,14 +108,14 @@
   width: 100%;
   height: 50%;
 }
-.redSide {
+.startSide {
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 50%;
   width: 100%; 
 }
-.blueSide {
+.safeSide {
   display: flex;
   flex-direction: column;
   align-items: center;
